<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sms"
            />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark2"
        android:alpha="0.6"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/cherrycolor2"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/sm_shetty_canteen"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorPrimary"
            android:textSize="23sp" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#ABF54242"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/loginpage"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="110dp"
            app:hintEnabled="false"
            >

        <EditText
            android:id="@+id/editText6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:fontFamily="@font/roboto_slab"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="180dp"
         app:passwordToggleEnabled="true"
         app:hintEnabled="false"
         >

         <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="@string/password"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
             android:fontFamily="@font/roboto_slab"
             />


     </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="240dp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="20dp"
                android:onClick="forget"
                android:id="@+id/btnforget"
                android:text="@string/forgetpass"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_slab"
                />

        <Button
            android:id="@+id/btn"
            android:layout_width="120dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginTop="90dp"
            android:background="@drawable/btn_shp"
            android:text="@string/login"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:onClick="userLogin"
            android:fontFamily="@font/roboto_slab"
            />

        <Button
            android:id="@+id/btn2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="140dp"
            android:layout_gravity="center"
            android:text="@string/register"
            android:textSize="18sp"
            android:background="@drawable/btn_shp"
            android:textColor="@color/grey"
            android:onClick="Reg"
            android:fontFamily="@font/roboto_slab"
            />
    </androidx.cardview.widget.CardView>
</RelativeLayout>


