<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgetpassword"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sms"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark2"
        android:alpha="0.6"
        />


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/cherrycolor2"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/sm_shetty_canteen"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/roboto_slab"
            />
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:cardBackgroundColor="#ABF54242"
        android:layout_marginTop="140dp"
        android:layout_marginStart="55dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/forget"
        android:textSize="28sp"/>
    <EditText
        android:id="@+id/editText6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:autofillHints="@string/NewPassword"
        android:hint="@string/NewPassword"
        android:inputType="textPassword"
        android:background="@drawable/shape"
        android:drawableStart="@drawable/password"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_slab"
        />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="200dp"
                android:autofillHints="@string/ReEnterpass"
                android:background="@drawable/shape"
                android:drawableStart="@drawable/password"
                android:hint="@string/ReEnterpass"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:fontFamily="@font/roboto_slab"
                />


    <Button
        android:id="@+id/btn"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:background="@drawable/btn_shp"
        android:text="@string/confirm"
        android:textColor="@color/grey"
        android:textSize="18sp"
        android:onClick="confirm"
        android:fontFamily="@font/roboto_slab"
        />


</androidx.cardview.widget.CardView>

</RelativeLayout>