<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="430dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/listcard"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5.5"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/coffe"
            android:id="@+id/imglist"
            android:layout_weight="4"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:id="@+id/idtitle"
                        android:fontFamily="@font/roboto_slab"
                        />
                </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textSize="25sp"
                    android:id="@+id/Rs"
                    android:textStyle="bold"
                    android:textColor="@color/cherrycolor2"
                    android:fontFamily="@font/roboto_slab"
                    />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>