<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/cherrycolor2"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/sm_shetty_canteen"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:fontFamily="@font/roboto_slab"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <!--<ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/flipper"
        />-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/coffe"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        >

    <!--<androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    -->
        <TextView
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:text="@string/meal_categories"
            android:textSize="25sp"
            android:textColor="@color/cherrycolor2"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_slab"
            />
        <include layout="@layout/smallcardview"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
</LinearLayout>