<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail_cards"
    android:orientation="vertical"
    android:layout_margin="6dp"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/cherrycolor2"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_marginStart="15dp"
            android:textSize="25sp"
            android:minHeight="?actionBarSize"
            android:text="@string/sm_shetty_canteen"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:fontFamily="@font/roboto_slab"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="-55dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/cart"
            android:onClick="addToBag"
            />

    </com.google.android.material.appbar.AppBarLayout>






    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="650dp"
        app:cardElevation="0dp"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="12"
        >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/coffe"
        android:id="@+id/imglist2"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:baselineAligned="false">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:maxLines="1"
                android:id="@+id/idtitle2"
                android:fontFamily="@font/roboto_slab"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:id="@+id/rs2"
                    android:textStyle="bold"
                    android:textColor="@color/cherrycolor2"
                    android:fontFamily="@font/roboto_slab"
                    />

            </LinearLayout>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            >
            <Button
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:text="@string/add_to_bag"
                android:textSize="23sp"
                android:textStyle="bold"
                android:background="@color/cherrycolor2"
                android:textColor="@color/white"
                android:id="@+id/btnorder"
                android:onClick="addToBag"
                android:fontFamily="@font/roboto_slab"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5"
            android:orientation="vertical"
            >
            <View
                android:layout_width="fill_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Recommended :"
                android:textSize="22dp"
                android:textColor="@color/cherrycolor2"
                android:gravity="center"
                android:fontFamily="@font/roboto_slab"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv2"
                android:scrollbars="horizontal"
                >


            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>