<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sms"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark2"
        android:alpha="0.6"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/cherrycolor2"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/sm_shetty_canteen"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/roboto_slab"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#ABF54242"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="35sp"/>
       <!-- <EditText
            android:id="@+id/et1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="105dp"
            android:inputType="textPersonName"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/username"
            android:autofillHints="@string/fullname"
            android:hint="@string/fullname"
            />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="120dp"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/username"
            android:fontFamily="@font/roboto_slab"
            />
        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/et3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/password"
            android:fontFamily="@font/roboto_slab"
            />

        <EditText
            android:id="@+id/et4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="280dp"
            android:autofillHints="@string/email"
            android:background="@drawable/shape"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/email"
             />

        <EditText
            android:id="@+id/et5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="360dp"
            android:autofillHints="@string/mobileno"
            android:background="@drawable/shape"
            android:drawableStart="@drawable/contact"
            android:hint="@string/mobileno"
            android:inputType="number"
            android:fontFamily="@font/roboto_slab"
            />
        <Button
            android:id="@+id/btnsubmit"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:textSize="18sp"
            android:background="@drawable/btn_shp"
            android:textColor="@color/grey"
            android:onClick="userReg"
            android:fontFamily="@font/roboto_slab"
            />


    </androidx.cardview.widget.CardView>
</RelativeLayout>



    <!--<EditText
        android:id="@+id/et1"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:hint="@string/contact"
        android:inputType="textPersonName"
        android:textColorHighlight="#ED000000"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/et5"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="275dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="8dp"
        android:textColorHint="@color/grey"
        android:ems="10"
        android:hint="Mobile no."
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <Button
        android:id="@+id/btn"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:textColor="@color/grey"
        android:background="@color/colorAccent"
        android:layout_marginTop="615dp"
        android:textSize="16dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />
 -->
